auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"stream-auth-deploy","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"stream-auth"}},"template":{"metadata":{"labels":{"app":"stream-auth"}},"spec":{"containers":[{"env":[{"name":"DATABASE_URL","value":"Driver={ODBC Driver 18 for SQL Server};Server=tcp:msqlsvc.database.windows.net,1433;Database=TestCase;Uid=abhilash;Pwd=admin@123@;Encrypt=yes;TrustServerCertificate=no;Connection Tim [...]
  creationTimestamp: "2026-04-10T12:33:53Z"
  generation: 10
  name: stream-auth-deploy
  namespace: default
  resourceVersion: "438118"
  uid: a7bb4347-11ae-41d6-8ebe-6f5e0505d7a3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: stream-auth
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: stream-auth
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: sql-sa
      containers:
      - name: stream-auth-cnt
        image: aksacr1.azurecr.io/auth-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
status:
  conditions:
  - lastTransitionTime: "2026-04-10T12:33:53Z"
    lastUpdateTime: "2026-04-10T12:33:53Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-04-10T13:15:20Z"
    lastUpdateTime: "2026-04-10T13:26:17Z"
    message: ReplicaSet "stream-auth-deploy-cc7986594" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 10
  replicas: 2
  unavailableReplicas: 2
  updatedReplicas: 1
