api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-api-deploy
  labels:
    app: stream-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stream-api
  template:
    metadata:
      labels:
        app: stream-api
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: sql-sa
      containers:
      - name: stream-api-cnt
        image: aksacr1.azurecr.io/api-gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: stream-api-service
spec:
  selector:
    app: stream-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
