ingress_fix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stream-ui-ing
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: jpshop.puneetdevops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-ui-svc
            port:
              number: 80
  - host: api.puneetdevops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-api-svc
            port:
              number: 8000
